[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cooking-with-gas"
version = "0.0.3"
dependencies = ["requests"]
authors = [{ name = "Harry Boyd", email = "hboyd255@gmail.com" }]
description = "A simple wrapper to make it easier to use the Google Apps Script API."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/HBoyd255/cooking-with-gas/"


[tool.setuptools]
packages = ["cooking_with_gas"]
